-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.4.0
-
None
If the "expand all" sticky button in the "advanced search" results pane's top bar is set to the state "on" (i.e. it is pressed), then, immediately after an advanced search completes, the search result list does not properly open the file items in the result list (either none, or only some, of the file items in the list are opened after the search).
Whenever the "expand all" button is manually toggled from "off" to "on" the list gets refreshed and all the file item results are properly opened, so this bug only refers to the file items in the result list not being properly opened immediately after a search, with the "expand all" button "on"
If the "expand all" button is "off" (i.e. not pressed) then the files list is displayed as expected (i.e. the file items in the list do not get automatically expanded) - well, at least as far as i can tell.
Note: this is a regression, the "expand all" sticky button used to work properly a few version back.