Search results: Fix that auto-expand failed on first set of results

They were expanded but collapsed again when the model was reset in the
setShowReplaceUI(bool show) call. Avoid resetting the model by informing
about the data change individually.

Change-Id: I48a94f2aec5b5d31d11166a299a2463b757939fa
Task-number: QTCREATORBUG-14320
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>